--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 @import "tailwindcss";
 
-  .container {
-    @apply max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8;
-  }
+html {
+  scroll-behavior: smooth;
+}
+
+.container {
+  @apply max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8;
+}
+
+section {
+  overflow: hidden;
+}
