--- a/src/components/ui/Box/Box.module.css
+++ b/src/components/ui/Box/Box.module.css
@@ -18,14 +18,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
-  background: transparent;
+  width: 200px;
+  height: 140px;
 }
 
 .image {
   max-width: 100%;
-  max-height: 160px;
+  max-height: 120px;
   width: auto;
   height: auto;
   object-fit: contain;
@@ -33,7 +32,12 @@
 }
 
 @media (max-width: 640px) {
+  .imageWrap {
+    width: 150px;
+    height: 100px;
+  }
+
   .image {
-    max-height: 110px;
+    max-height: 90px;
   }
 }
